<resources>
    <string name="app_name">GrubGamble</string>
    <string name="login">Login</string>
    <string name="grubgamble">GrubGamble</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="grubgamble_reg">GrubGamble</string>
    <string name="username_register">Username</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel_signup">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="spin_the_wheel">Spin The Wheel</string>
    <string name="spin_button">spin</string>
    <string name="filters_button">filters</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="minigames_text">Minigames</string>
    <string name="roulette_text">Roulette</string>
    <string name="profile_text">Profile</string>
    <string name="logout_toolbar">Logout</string>
    <string name="profile_points">points</string>
    <string name="friends_list">Friends:</string>
    <string name="profile_pic">profile_pic</string>
    <string name="add_friend_button">add</string>
    <string name="tictactoe_image">tictactoe</string>
    <string name="game_1">Game 1</string>
    <string name="randomnum_game">randomNum</string>
    <string name="game_2">Game 2</string>
    <string name="game3_image">game3</string>
    <string name="game_3">Game 3</string>
    <string name="game4_image">game4</string>
    <string name="game_4">Game 4</string>
    <string name="play_button">play</string>
    <string name="game1">game1</string>
    <string name="game2">game2</string>
    <string name="game3">game3</string>
    <string name="game4">game4</string>
    <string name="guess_the_number">GUESS THE NUMBER</string>
    <string name="can_you_guess_the_number_between_1_to_10">Can you guess the number between 1 to 10?</string>
    <string name="guess">GUESS</string>
    <string name="enter">ENTER</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="reset_game">reset game</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="image6">image6</string>
    <string name="image7">image7</string>
    <string name="image8">image8</string>
    <string name="image9">image9</string>
    <string name="filters">FILTERS</string>
    <string name="food_types">CUISINE</string>
    <string name="restrictions">RESTRICTIONS</string>
    <string name="add">Add</string>
    <string name="search_food_restrictions">Search Food Restrictions</string>
    <string name="delete">Delete</string>
    <string name="search_food_types">Search Cuisines</string>
    <string name="distance_miles">Distance: 1 Mile(s)</string>
    <string name="done">DONE</string>
    <string name="example_food">Example</string>
    <string name="example_foodr">Example</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recover_email">Email</string>
    <string name="send_email_button">send email</string>
    <string name="cancel_recover_button">cancel</string>
    <string name="gg_icon_login">TODO</string>
    <string name="gg_icon_register">TODO</string>
    <string name="forgot_pw_image">TODO</string>
    <string name="_0">0</string>
    <string name="_25">25</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="wheel">wheel</string>
    <string name="mini_wheel">mini_wheel</string>
    <string name="uploadPic">upload</string>
    <string name="find_a_friend">Find a Friend!</string>
</resources>