<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <EditText
        android:id="@+id/recoverEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/recover_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordImage" />

    <Button
        android:id="@+id/buttonRecover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_email_button"
        app:layout_constraintEnd_toEndOf="@+id/recoverEmail"
        app:layout_constraintStart_toStartOf="@+id/recoverEmail"
        app:layout_constraintTop_toBottomOf="@+id/recoverEmail" />

    <Button
        android:id="@+id/buttonCancelRecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel_recover_button"
        app:layout_constraintEnd_toEndOf="@+id/buttonRecover"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecover" />

    <ImageView
        android:id="@+id/forgotPasswordImage"
        android:layout_width="414dp"
        android:layout_height="186dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/forgot_pw_image"
        android:src="@drawable/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>